--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bright Star</title>
+  <title>Bright Star Non-Medical Transporation</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
@@ -272,7 +272,7 @@
         </div>
         <div class="col-lg-5 offset-lg-2">
           <div class="about__company__title">
-            <p>Established in 2022 as a family-owned venture, we offer expert non-emergency wheelchair transport
+            <p>Established in 2018 as a family-owned venture, we offer expert non-emergency wheelchair transport
               services accessible to the public across the tri-state region. Our focused medical transport covers
               various cases including senior citizens, wheelchair-dependent individuals, and families with special
               needs. Our NEMT services cater to private individuals, medical institutions, insurance entities, nursing
@@ -546,7 +546,7 @@ page when looking at its layout.</p>
 <h6>Becky Taylor / <span>Support</span></h6>
 </div>
 <ul class="team__item__social">
-<li><a href="#"><span class="social_facebook"></span></a></li>
+<li><a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a></li>
 <li><a href="#"><span class="social_twitter"></span></a></li>
 <li><a href="#"><span class="social_linkedin"></span></a></li>
 </ul>
@@ -558,7 +558,7 @@ page when looking at its layout.</p>
 <h6>Martin Tom / <span>Support</span></h6>
 </div>
 <ul class="team__item__social">
-<li><a href="#"><span class="social_facebook"></span></a></li>
+<li><a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a></li>
 <li><a href="#"><span class="social_twitter"></span></a></li>
 <li><a href="#"><span class="social_linkedin"></span></a></li>
 </ul>
@@ -585,11 +585,10 @@ page when looking at its layout.</p>
               solutions for the elderly, disabled individuals, and those facing medical obstacles.
             </p>
             <div class="footer__social">
-              <a href="#"><span class="social_facebook"></span></a>
-              <a href="#"><span class="social_twitter"></span></a>
-              <a href="#"><span class="social_linkedin"></span></a>
-              <a href="#"><span class="social_pinterest"></span></a>
-            </div>
+              <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+              <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+              <a href="https://www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
+              </div>
           </div>
         </div>
         <div class="col-lg-2 offset-lg-1 col-md-6 col-sm-6">
@@ -609,8 +608,7 @@ page when looking at its layout.</p>
             <h5>Interesting Infos</h5>
             <ul>
               <li>
-                <p style="color: gainsboro;">We are commited to providing High Quality Service to our customers through
-                  out virginia, maryland and washington DC metro areas.</p>
+                <p style="color: gainsboro;">We are commited to providing High Quality Service to our customers in South and South West Virginia metro areas.</p>
               </li>
               <!--<li><a href="#">Expert Staff</a></li>
 <li><a href="#">Ground Shipping</a></li>
@@ -625,7 +623,7 @@ page when looking at its layout.</p>
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstartransportt@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
@@ -650,11 +648,10 @@ page when looking at its layout.</p>
           <div class="col-lg-3 col-md-4">
             <div class="footer__copyright__links">
               <div class="offcanvas__social">
-                <a href="#"><span class="social_facebook"></span></a>
-                <a href="#"><span class="social_twitter"></span></a>
-                <a href="#"><span class="social_linkedin"></span></a>
-                <a href="#"><span class="social_pinterest"></span></a>
-              </div>
+                <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+                <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+                <a href="https://www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
+                </div>
             </div>
           </div>
         </div>
