--- a/discount.html
+++ b/discount.html
@@ -274,11 +274,10 @@
               solutions for the elderly, disabled individuals, and those facing medical obstacles.
             </p>
             <div class="footer__social">
-              <a href="#"><span class="social_facebook"></span></a>
-              <a href="#"><span class="social_twitter"></span></a>
-              <a href="#"><span class="social_linkedin"></span></a>
-              <a href="#"><span class="social_pinterest"></span></a>
-            </div>
+              <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+              <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+              <a href="https://www.linkedin.com/in/irihose-obed-004571291/"><span class="social_linkedin"></span></a>
+              </div>
           </div>
         </div>
         <div class="col-lg-2 offset-lg-1 col-md-6 col-sm-6">
@@ -305,12 +304,12 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__widget">
-            <h5>BirghtStar Non-Medical Transportation</h5>
+            <h5>BrightStar Non-Medical Transportation</h5>
             <ul class="address">
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstartransportt@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
