--- a/ambulatory.html
+++ b/ambulatory.html
@@ -278,7 +278,6 @@
   <div style="height: 40px;"><a href="elderly.html">Elderly Transporation</a></div>
   <div style="height: 40px;"><a href="btb.html">Bed to Bed Transporation</a></div>
   <div style="height: 40px;"><a href="stretcher.html">Stretcher Transporation</a></div>
-  <div style="height: 40px;"><a href="nem.html">Non-Emergency Medical Transporation</a></div>
   <div style="height: 40px;"><a href="special.html">Special Trips</a></div>
   <div style="height: 40px;"><a href="ldistance.html">Long Distance Transporation</a></div>
   <div style="height: 60px;"><a href="bariatric.html">Bariatric Transporation</a></div>
@@ -616,9 +615,9 @@ page when looking at its layout.</p>
               solutions for the elderly, disabled individuals, and those facing medical obstacles.
             </p>
             <div class="footer__social">
-              <a href="#"><span class="social_facebook"></span></a>
-              <a href="#"><span class="social_twitter"></span></a>
-              <a href="#"><span class="social_linkedin"></span></a>
+              <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+              <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+              <a href="https://www.linkedin.com/in/irihose-obed-004571291/"><span class="social_linkedin"></span></a>
             </div>
           </div>
         </div>
@@ -639,8 +638,7 @@ page when looking at its layout.</p>
             <h5>Interesting Infos</h5>
             <ul>
               <li>
-                <p style="color: gainsboro;">We are commited to providing High Quality Service to our customers through
-                  out virginia, maryland and washington DC metro areas.</p>
+                <p style="color: gainsboro;">We are commited to providing High Quality Service to our customers in South and South-West Virginia areas.</p>
               </li>
               <!--<li><a href="#">Expert Staff</a></li>
 <li><a href="#">Ground Shipping</a></li>
@@ -655,7 +653,7 @@ page when looking at its layout.</p>
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstartransportt@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
@@ -680,9 +678,9 @@ page when looking at its layout.</p>
           <div class="col-lg-3 col-md-4">
             <div class="footer__copyright__links">
               <div class="offcanvas__social">
-                <a href="#"><span class="social_facebook"></span></a>
-                <a href="#"><span class="social_twitter"></span></a>
-                <a href="#"><span class="social_linkedin"></span></a>
+                <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
+                <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
+                <a href="https://www.linkedin.com/in/irihose-obed-004571291/"><span class="social_linkedin"></span></a>
               </div>
             </div>
           </div>
