--- a/index.html
+++ b/index.html
@@ -485,13 +485,13 @@ ut labore et dolore magna aliqua.</p>-->
       </div>
     </div>
     <!-- <div class="chooseus__pic set-bg" data-setbg="img/chooseus/chooseus-pic.jpg"></div> -->
-    <div class="chooseus__pic set-bg col-lg-6">
+    <!--<div class="chooseus__pic set-bg col-lg-6">
       <iframe width="670" height="400" src="https://www.youtube.com/embed/wb8zuCaEIz4" title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
     </div>
-    </div>
+    </div>-->
   </section>
 
 
