--- a/index.html
+++ b/index.html
@@ -378,8 +378,7 @@ ut labore et dolore magna aliqua.</p>-->
             </div>
           </div>
       </center>
-      <h5 style="text-align: center;color: orangered;">BRIGHT STAR TRANSPORTATION HEALTHCARE PROVIDE NON-MEDICAL
-        TRANSPORT TO VARIOUS HEALTHCARE FACILITIES AND INDIVIDUALS</h5><br>
+      <h5 style="text-align: center;color: orangered;">BRIGHT STAR NON-MEDICAL TRANSPORTATION PROVIDE TRANSPORT TO VARIOUS FACILITIES</h5><br>
       <div class="partner__logo">
         <div class="row">
           <div class="col-lg-12">
