--- a/areas.html
+++ b/areas.html
@@ -303,7 +303,7 @@
               empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes
               thorough background checks and has completed extensive training in the handling of patients with special
               needs to ensure safe and proper transfer. Our staff also understands the necessity of maintaining patient
-              confidentiality. BrightStar Non-Medical Transportation LLC is the leading company for assisted medical
+              confidentiality. OMBI Non-Medical Transportation LLC is the leading company for assisted medical
               transportation & nursing homes transportation in
               <span id="area2">
                 <script>
@@ -664,12 +664,12 @@ page when looking at its layout.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__widget">
-            <h5>BrightStar Non-Medical Transportation</h5>
+            <h5>OMBI Non-Medical Transportation</h5>
             <ul class="address">
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">ride@ombinmtransportation.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
