--- a/bariatric.html
+++ b/bariatric.html
@@ -262,7 +262,7 @@
   <div class="col-lg-8">
     <p></p>
     <img src="./img/new-logo.png" alt="">
-    <div>BrightStar Non-Medical Transportation stands at the forefront as a leading provider of bariatric transportation services. Our specialized bariatric wheelchair transportation services are meticulously crafted to guarantee the safe, comfortable, and convenient travel of individuals with unique needs, whether it's for short or long distances. We prioritize delivering exceptional patient care and go the extra mile to ensure the utmost comfort and safety for our people.</div>
+    <div>OMBI Non-Medical Transportation stands at the forefront as a leading provider of bariatric transportation services. Our specialized bariatric wheelchair transportation services are meticulously crafted to guarantee the safe, comfortable, and convenient travel of individuals with unique needs, whether it's for short or long distances. We prioritize delivering exceptional patient care and go the extra mile to ensure the utmost comfort and safety for our people.</div>
     <div>Our spacious and luxurious transport vehicles offer ample room for individuals, allowing them to stand comfortably inside. There's also sufficient seating for multiple individuals, and we wholeheartedly welcome the person's family and loved ones to accompany them on their journey. The core objective of our bariatric wheelchair transportation services is to ensure that individuals with special needs have reliable and accessible transportation options.</div>
     <div style="height: 200px;">We provide our services for the following purposes: <br>
       <li>Door-through-door services for individuals</li>
@@ -651,12 +651,12 @@ page when looking at its layout.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__widget">
-            <h5>BrightStar Non-Medical Transportation</h5>
+            <h5>OMBI Non-Medical Transportation</h5>
             <ul class="address">
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">ride@ombinmtransportation.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
