--- a/btb.html
+++ b/btb.html
@@ -263,7 +263,7 @@
     <p></p>
     <div style="text-align: center;"><h2>#1 BED TO BED TRANSPORTATION SERVICES IN SOUTH AND SOUTHWEST VIRGINIA</h2></div>
     <div>Individuals facing mobility challenges due to illness or accidents and who are confined to their beds can take advantage of Non-Emergency Medical Transportation's bed-to-bed transportation service. These individuals are unable to bear weight on their legs or navigate stairs, making walking or climbing stairs impractical.</div>
-    <div>This is where BrightStar Non-Medical Transportation services step in. We are specifically designed to safely, comfortably, and independently transport these individuals up and down stairs using a variety of techniques. We employ high-quality, comfortable wheelchairs for our clients. Our team delivers the wheelchair directly to the client's bedside and assists them in transferring to the wheelchair using specialized medical techniques. Once we ensure everyone is securely positioned, we initiate the transportation process.</div>
+    <div>This is where OMBI Non-Medical Transportation services step in. We are specifically designed to safely, comfortably, and independently transport these individuals up and down stairs using a variety of techniques. We employ high-quality, comfortable wheelchairs for our clients. Our team delivers the wheelchair directly to the client's bedside and assists them in transferring to the wheelchair using specialized medical techniques. Once we ensure everyone is securely positioned, we initiate the transportation process.</div>
     <div style="height: 150px;">Our approach involves transporting the individual while seated safely in a wheelchair, allowing them to navigate stairs with ease. Upon reaching their destination, our driver will either wait for the individual or, in the case of longer visits, will coordinate transportation back to their residence by contacting you.</div>
   </div>
   <div class="col-lg-4">
@@ -645,12 +645,12 @@ page when looking at its layout.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__widget">
-            <h5>BrightStar Non-Medical Transportation</h5>
+            <h5>OMBI Non-Medical Transportation</h5>
             <ul class="address">
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">ride@ombinmtransportation.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
