--- a/ldistance.html
+++ b/ldistance.html
@@ -286,11 +286,11 @@
     <p></p>
     <div><h2>LOOKING FOR RELIABLE LONG DISTANCE MEDICAL TRANSPORTATION?</h2></div>
     <p></p>
-    <div><h4>WITH 5 YEARS OF EXPERIENCE, BRIGHTSTAR NON-MEDICAL TRANSPORTATION IS THE MOST AFFORDABLE TRANSPORT SERVICE FOR INDIVIDUALS THOSE WHO NEED ASSISTED LONG DISTANCE/STATE TO STATE TRANSPORT.</h4></div>
+    <div><h4>WITH 5 YEARS OF EXPERIENCE, OMBI NON-MEDICAL TRANSPORTATION IS THE MOST AFFORDABLE TRANSPORT SERVICE FOR INDIVIDUALS THOSE WHO NEED ASSISTED LONG DISTANCE/STATE TO STATE TRANSPORT.</h4></div>
     <p></p>
-    <div><h6>Why BrightStar Non-Medical Transportion for Long Distance?</h6></div>
+    <div><h6>Why OMBI Non-Medical Transportion for Long Distance?</h6></div>
     <p></p>
-    <div>Our service is specifically designed for individuals who are unable to travel using conventional means due to some assisted travel requirements. BrightStar Non-Medical Transportation has especially built vans for:<br>
+    <div>Our service is specifically designed for individuals who are unable to travel using conventional means due to some assisted travel requirements. OMBI Non-Medical Transportation has especially built vans for:<br>
       <li>Long-distance transportation (significant distances, typically between cities or states)</li>
       <li>For non-medical needs.</li>
     </div>
@@ -676,12 +676,12 @@ page when looking at its layout.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__widget">
-            <h5>BrightStar Non-Medical Transportation</h5>
+            <h5>OMBI Non-Medical Transportation</h5>
             <ul class="address">
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">ride@ombinmtransportation.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
