--- a/nem.html
+++ b/nem.html
@@ -292,13 +292,13 @@
                 partners, prioritizing dependability, convenience, safety, and value, while embodying servant leadership
                 principles.
 
-                BrightStar Non-Medical Transportation LLC was established with the aim of providing trustworthy and
+                OMBI Non-Medical Transportation LLC was established with the aim of providing trustworthy and
                 quality NEMT transportation services to individuals in need of assisted transportation. Our dedication
                 lies in bridging the gap between personal and public transportation options.
 
-                BrightStar Non-Medical Transportation LLC is dedicated to offering the most reliable and highest quality
+                OMBI Non-Medical Transportation LLC is dedicated to offering the most reliable and highest quality
                 wheelchair transportation, with a direct focus on addressing our clients' needs promptly, sensitively,
-                and with unwavering integrity. We at BrightStar Non-Medical Transportation LLC aim to surpass your
+                and with unwavering integrity. We at OMBI Non-Medical Transportation LLC aim to surpass your
                 expectations.
 
                 Our entire staff, identified by photo ID badges and dressed in company uniforms, adheres to strict
@@ -619,12 +619,12 @@ page when looking at its layout.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__widget">
-            <h5>BrightStar Non-Medical Transportation</h5>
+            <h5>OMBI Non-Medical Transportation</h5>
             <ul class="address">
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">ride@ombinmtransportation.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
