--- a/stretcher.html
+++ b/stretcher.html
@@ -264,9 +264,9 @@
     <div style="text-align: center;"><h2>NUMBER ONE STRETCHER/GURNEY TRANSPORTATION SERVICE IN SOUTH AND SOUTHWEST VIRGINIA</h2></div>
     <div><h4>WE ARE TOP RATED PROVIDERS OF AMBULATORY, STAIR LIFTER WHEELCHAIR, AND <span style="color: #FF8F00;">STRETCHER TRANSPORTATION</span></h4></div>
     <img src="./img/new-logo.png" alt="">
-    <div>With over 5 years of experience, BrightStar Non-Medical Transportation specializes in non-emergency medical <span style="color: #0077B5;">stretcher transportation services</span>. Our services adhere to the highest industry standards, offering premier Non-Medical transportation solutions to the individuals. As a private non-emergency medical transportation company, we are dedicated to ensuring secure and punctual transportation for all our clients.</div>
-    <div>At BrightStar Non-Medical Transportation, our stretcher transport services are administered by skilled and experienced professionals who prioritize the safety and comfort of our clients. We are committed to deliver top-notch stretcher transportation services in your vicinity, including local, long-distance, and out-of-state options. For long-distance stretcher transportation, we provide a range of choices to guarantee the safe conveyance of your loved ones regardless of the distance.</div>
-    <div style="height: 150px;">Stretcher transportion involves the use of stretchers or gurneys for individuals who are unable to sit up or require enhanced medical attention during transit. BrightStar Non-Medical Transportation places the highest emphasis on service quality and safety to serve the best interests of all our customers.</div>
+    <div>With over 5 years of experience, OMBI Non-Medical Transportation specializes in non-emergency medical <span style="color: #0077B5;">stretcher transportation services</span>. Our services adhere to the highest industry standards, offering premier Non-Medical transportation solutions to the individuals. As a private non-emergency medical transportation company, we are dedicated to ensuring secure and punctual transportation for all our clients.</div>
+    <div>At OMBI Non-Medical Transportation, our stretcher transport services are administered by skilled and experienced professionals who prioritize the safety and comfort of our clients. We are committed to deliver top-notch stretcher transportation services in your vicinity, including local, long-distance, and out-of-state options. For long-distance stretcher transportation, we provide a range of choices to guarantee the safe conveyance of your loved ones regardless of the distance.</div>
+    <div style="height: 150px;">Stretcher transportion involves the use of stretchers or gurneys for individuals who are unable to sit up or require enhanced medical attention during transit. OMBI Non-Medical Transportation places the highest emphasis on service quality and safety to serve the best interests of all our customers.</div>
   </div>
   <div class="col-lg-4">
   <p></p>
@@ -647,12 +647,12 @@ page when looking at its layout.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__widget">
-            <h5>BrightStar Non-Medical Transportation</h5>
+            <h5>OMBI Non-Medical Transportation</h5>
             <ul class="address">
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">ride@ombinmtransportation.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
