--- a/career.html
+++ b/career.html
@@ -234,10 +234,10 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-        <h2>ARE YOU EXPERIENCED IN DRIVING, CUSTOMER SERVICE OR PATIENT CARE? JOIN THE SUCCESS TEAM AT BrightStar
+        <h2>ARE YOU EXPERIENCED IN DRIVING, CUSTOMER SERVICE OR PATIENT CARE? JOIN THE SUCCESS TEAM AT OMBI
           Non-Medical Transportationation LLC</h2>
         <p>This position focuses on non-emergency medical transportation, but we welcome candidates with experience in
-          customer service, home health-care, and providing high-quality patient or other care. BrightStar Non-Medical
+          customer service, home health-care, and providing high-quality patient or other care. OMBI Non-Medical
           Transportationation proudly serves our communities with ADA (Americans with Disabilities Act) transportation.
           Come join the largest private sector operator of public transportation in North America – one that cares about
           its employees, passengers and their communities.</p>
@@ -392,12 +392,12 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__widget">
-            <h5>BrightStar Non-Medical Transportation</h5>
+            <h5>OMBI Non-Medical Transportation</h5>
             <ul class="address">
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">ride@ombinmtransportation.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
