--- a/discount.html
+++ b/discount.html
@@ -250,7 +250,7 @@
     <div class="container-box" style="border: 1px solid orangered;padding: 2%;">
       <div class="information">
 
-        <p>Give a call to BrightStar Non-Medical Transportation Services for safe and convenient medical/non-medical
+        <p>Give a call to OMBI Non-Medical Transportation Services for safe and convenient medical/non-medical
           transportation needs. Call <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')"
               style="color: red;">571-450-1300</a></span> now or book in advance.</p>
 
@@ -304,12 +304,12 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__widget">
-            <h5>BrightStar Non-Medical Transportation</h5>
+            <h5>OMBI Non-Medical Transportation</h5>
             <ul class="address">
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">ride@ombinmtransportation.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
