--- a/fleet.html
+++ b/fleet.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bright Star</title>
+  <title>OMBI</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
@@ -454,7 +454,7 @@
         <div class="col-lg-5">
           <div class="section-title">
             <p>A Small Introduction</p>
-            <h2>Welcome to the Bright Star Non Medical Transportation</h2>
+            <h2>Welcome to the OMBI Non Medical Transportation</h2>
             <img src="/img/hero.jpg" alt="van"><br><br>
             <a href="/contact.html" class="primary-btn"><span>Contact Us</span></a>
             <a href="#" class="primary-btn"><span>Download Business profile & Prices</span></a>
@@ -475,7 +475,7 @@
         <div class="col-lg-5">
           <div class="section-title">
             <p>Why?</p>
-            <h2>Bright Star Non Medical Transportation</h2>
+            <h2>OMBI Non Medical Transportation</h2>
             <div class="about__company__title">
               <p>Our team is committed to delivering top-notch NEMT transportation services to our customers and
                 partners, prioritizing dependability, convenience, safety, and value, while embodying servant leadership
@@ -808,12 +808,12 @@ page when looking at its layout.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__widget">
-            <h5>BrightStar Non-Medical Transportation</h5>
+            <h5>OMBI Non-Medical Transportation</h5>
             <ul class="address">
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">ride@ombinmtransportation.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
