--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bright Star Non-Medical Transportation</title>
+  <title>OMBI Non-Medical Transportation</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -241,7 +241,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="hero__text">
-            <span class="hero__label">Bright Star Non Medical Transportation</span>
+            <span class="hero__label">OMBI Non Medical Transportation</span>
             <h2>Fast and Reliable Transportation</h2>
             <a href="/services.html" class="primary-btn"><span>View services</span></a>
           </div>
@@ -257,12 +257,12 @@
         <div class="col-lg-5 p-0">
           <div class="section-title">
             <span>What We do?</span>
-            <h2>Welcome to the Bright Star Non-Medical Transportation, We are the best.</h2>
+            <h2>Welcome to the OMBI Non-Medical Transportation, We are the best.</h2>
           </div>
         </div>
         <div class="col-lg-5 offset-lg-2 p-0">
           <div class="services__top__text">
-            <p>For more than Five Years, Bright Star Non-Medical Transportation services
+            <p>For more than Five Years, OMBI Non-Medical Transportation services
               have improved bottom lines across virtually every industry.</p>
           </div>
         </div>
@@ -291,7 +291,7 @@
               <img src="img/services/si-2.png" alt="">
             </div>
             <h5>Strecher Transport</h5>
-            <p>With over five years of expertise, BrightStar Non-Medical Transportation specializes in non-emergency
+            <p>With over five years of expertise, OMBI Non-Medical Transportation specializes in non-emergency
               medical stretcher transportation services.</p>
             <a href="#">Read More</a>
           </div>
@@ -378,7 +378,7 @@ ut labore et dolore magna aliqua.</p>-->
             </div>
           </div>
       </center>
-      <h5 style="text-align: center;color: orangered;">BRIGHT STAR NON-MEDICAL TRANSPORTATION PROVIDE TRANSPORT TO VARIOUS FACILITIES</h5><br>
+      <h5 style="text-align: center;color: orangered;">OMBI NON-MEDICAL TRANSPORTATION PROVIDE TRANSPORT TO VARIOUS FACILITIES</h5><br>
       <div class="partner__logo">
         <div class="row">
           <div class="col-lg-12">
@@ -569,7 +569,7 @@ your free listings for any luxury property you have.</p>
     <div class="container-box" style="border: 1px solid orangered;padding: 2%;">
       <div class="information">
         <p><span>LIMITED-TIME DISCOUNT OFFER</span>
-          BrightStar Non Medical Transportation Healthcare has reduced rates. Up to 30% off for limited time</p>
+          OMBI Non Medical Transportation Healthcare has reduced rates. Up to 30% off for limited time</p>
         <a href="/discount.html" class="primary-btn"><span>See Rates</span></a>
       </div>
 
@@ -822,7 +822,7 @@ ut labore et dolore magna aliqua.</p>-->
       <div class="container-box" style="border: 1px solid orangered;padding: 2%;">
         <div class="information">
 
-          <p>Give a call to BrightStar Non-Medical Transportation Services for safe and convenient medical/non-medical
+          <p>Give a call to OMBI Non-Medical Transportation Services for safe and convenient medical/non-medical
             transportation needs. Call <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')"
                 style="color: red;">571-450-1300</a></span> now or book in advance.</p>
 
@@ -878,12 +878,12 @@ ut labore et dolore magna aliqua.</p>-->
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="footer__widget">
-              <h5>Bright Star Non-Medical Transportation</h5>
+              <h5>OMBI Non-Medical Transportation</h5>
               <ul class="address">
                 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
                 <li><span class="icon_phone"></span> +1 540-380-0024</li>
                 <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                    data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstarnonmedicaltransport@gmail.com</a>
+                    data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">ride@ombinmtransportation.com</a>
                 </li>
                 <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
               </ul>
