--- a/services.html
+++ b/services.html
@@ -275,7 +275,7 @@
             <p>Providing Non-Emergency</p>
             <p>Medical Transport (NEMT) in the whole Virginia</p><br>
             <p>If you are looking for assisted transportation services like wheelchair transport in any Virginia city,
-              BrightStar Non-Medical Transportation LLC is the right answer. We have services hundreds of patients
+              OMBI Non-Medical Transportation LLC is the right answer. We have services hundreds of patients
               especially elderly ones who need special care.</p><br>
             <p>We offer quality & professional, highly personalized door-to-door non-emergency medical transportation
               service. Our trained staff will pick you up from inside your house or office and transport with complete
@@ -304,7 +304,7 @@
                 understand the difficulties that arise for persons with limited mobility. Each driver goes through back
                 ground check and has completed extensive training in the handling of patients with special needs to
                 insure safe and proper transfer. Our staff also understands the necessity of maintaining patient
-                confidentiality. BrightStar Non-Medical Transportation LLC is the leading wheelchair transport in
+                confidentiality. OMBI Non-Medical Transportation LLC is the leading wheelchair transport in
                 Washington DC, Virginia & Maryland, call us for more details or to schedule an appointment.</p>
             </div>
           </div>
@@ -604,12 +604,12 @@ page when looking at its layout.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__widget">
-            <h5>BrightStar Non-Medical Transportation</h5>
+            <h5>OMBI Non-Medical Transportation</h5>
             <ul class="address">
               <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
               <li><span class="icon_phone"></span> +1 540-380-0024</li>
               <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstartransportt@gmail.com</a></li>
+                  data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">ride@ombinmtransportation.com</a></li>
               <!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
             </ul>
           </div>
