--- a/contact.html
+++ b/contact.html
@@ -120,23 +120,23 @@
 <body>
 
   <div class="ibar">
-    <a href="https://www.facebook.com/profile.php?id=61551405146949" class="facebk">
+    <a href="https://www.facebook.com/profile.php?id=61561874110588" class="facebk">
       Visit Us<i class="fa-brands fa-square-facebook"></i>
     </a>
-    <a href="https://www.instagram.com/brightstarnonmedicaltransport/" class="insta">
+    <a href="https://www.instagram.com/ombi_nm_transportation/" class="insta">
       Visit Us<i class="fa-brands fa-square-instagram"></i>
     </a>
-    <a href="https://twitter.com/brightstarnmt" class="twi">
+    <a href="https://x.com/OIrihose67722" class="twi">
       Visit Us<i class="fa-brands fa-square-twitter"></i>
     </a>
     
-    <a href="mailto:brightstarnonmedicaltransport@gmail.com" class="mail">
+    <a href="mailto:ride@ombinonmedicaltransportation.com" class="mail">
       Visit Us<i class="fa-sharp fa-solid fa-envelope"></i>
     </a>
-    <a href="https://www.youtube.com/@BrightStarNon-MedicalTransport/featured" class="utube">
+    <a href="https://www.youtube.com/channel/UCsE57V3wV8V7zHeV35ZkxMQ" class="utube">
       Visit Us<i class="fa-brands fa-square-youtube"></i>
     </a>
-    <a href="https://www.linkedin.com/in/irihose-obed-004571291" class="linkedin">
+    <a href="https://www.linkedin.com/in/obed-irihose-1a661b31b/" class="linkedin">
       Visit Us<i class="fa-brands fa-linkedin"></i>
     </a>
   </div>
@@ -169,9 +169,9 @@
     </ul>
 
     <div class="offcanvas__social">
-      <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
-      <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
-      <a href="https://www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
+      <a href="https://www.facebook.com/profile.php?id=61561874110588"><span class="social_facebook"></span></a>
+      <a href="https://x.com/OIrihose67722"><span class="social_twitter"></span></a>
+      <a href="https://www.linkedin.com/in/obed-irihose-1a661b31b/"><span class="social_linkedin"></span></a>
     </div>
   </div>
 
@@ -188,9 +188,9 @@
             <div class="header__top__right">
 
               <div class="header__top__right__social">
-                <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
-                <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
-                <a href="https://www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
+                <a href="https://www.facebook.com/profile.php?id=61561874110588"><span class="social_facebook"></span></a>
+                <a href="https://x.com/OIrihose67722"><span class="social_twitter"></span></a>
+                <a href="https://www.linkedin.com/in/obed-irihose-1a661b31b/"><span class="social_linkedin"></span></a>
               </div>
             </div>
           </div>
@@ -496,9 +496,9 @@ strict attention.</p>
               solutions for the elderly, disabled individuals, and those facing medical obstacles.
             </p>
             <div class="footer__social">
-              <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
-              <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
-              <a href="https://www.linkedin.com/in/irihose-obed-004571291/"><span class="social_linkedin"></span></a>
+              <a href="https://www.facebook.com/profile.php?id=61561874110588"><span class="social_facebook"></span></a>
+              <a href="https://x.com/OIrihose67722"><span class="social_twitter"></span></a>
+              <a href="https://www.linkedin.com/in/obed-irihose-1a661b31b/"><span class="social_linkedin"></span></a>
               </div>
           </div>
         </div>
@@ -559,9 +559,9 @@ strict attention.</p>
           <div class="col-lg-3 col-md-4">
             <div class="footer__copyright__links">
               <div class="offcanvas__social">
-                <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
-                <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
-                <a href="https://www.linkedin.com/in/irihose-obed-004571291/"><span class="social_linkedin"></span></a>
+                <a href="https://www.facebook.com/profile.php?id=61561874110588"><span class="social_facebook"></span></a>
+                <a href="https://x.com/OIrihose67722"><span class="social_twitter"></span></a>
+                <a href="https://www.linkedin.com/in/obed-irihose-1a661b31b/"><span class="social_linkedin"></span></a>
                 </div>
             </div>
           </div>
