--- a/navbar.html
+++ b/navbar.html
@@ -14,9 +14,9 @@
                         </ul>
                         <div class="header__top__right">
                             <div class="header__top__right__social">
-                                <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
-                                <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
-                                <a href="https://www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
+                                <a href="https://www.facebook.com/profile.php?id=61561874110588"><span class="social_facebook"></span></a>
+                                <a href="https://x.com/OIrihose67722"><span class="social_twitter"></span></a>
+                                <a href="https://www.linkedin.com/in/obed-irihose-1a661b31b/"><span class="social_linkedin"></span></a>
                             </div>
                         </div>
                     </div>
