--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bright Star Non-Medical Transporation</title>
+  <title>OMBI Non-Medical Transporation</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
@@ -108,23 +108,23 @@
 <body>
 
   <div class="ibar">
-    <a href="https://www.facebook.com/profile.php?id=61551405146949" class="facebk">
+    <a href="https://www.facebook.com/profile.php?id=61561874110588" class="facebk">
       Visit Us<i class="fa-brands fa-square-facebook"></i>
     </a>
-    <a href="https://www.instagram.com/brightstarnonmedicaltransport/" class="insta">
+    <a href="https://www.instagram.com/ombi_nm_transportation/" class="insta">
       Visit Us<i class="fa-brands fa-square-instagram"></i>
     </a>
-    <a href="https://twitter.com/brightstarnmt" class="twi">
+    <a href="https://x.com/OIrihose67722" class="twi">
       Visit Us<i class="fa-brands fa-square-twitter"></i>
     </a>
     
-    <a href="mailto:brightstarnonmedicaltransport@gmail.com" class="mail">
+    <a href="mailto:ride@ombinonmedicaltransportation.com" class="mail">
       Visit Us<i class="fa-sharp fa-solid fa-envelope"></i>
     </a>
-    <a href="https://www.youtube.com/@BrightStarNon-MedicalTransport/featured" class="utube">
+    <a href="https://www.youtube.com/channel/UCsE57V3wV8V7zHeV35ZkxMQ" class="utube">
       Visit Us<i class="fa-brands fa-square-youtube"></i>
     </a>
-    <a href="https://www.linkedin.com/in/irihose-obed-004571291/" class="linkedin">
+    <a href="https://www.linkedin.com/in/obed-irihose-1a661b31b/" class="linkedin">
       Visit Us<i class="fa-brands fa-linkedin"></i>
     </a>
   </div>
@@ -157,9 +157,9 @@
       <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
     </ul>
     <div class="offcanvas__social">
-      <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
-      <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
-      <a href="https://www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
+      <a href="https://www.facebook.com/profile.php?id=61561874110588"><span class="social_facebook"></span></a>
+      <a href="https://x.com/OIrihose67722"><span class="social_twitter"></span></a>
+      <a href="https://www.linkedin.com/in/obed-irihose-1a661b31b/"><span class="social_linkedin"></span></a>
     </div>
   </div>
 
@@ -179,9 +179,9 @@
             </ul>
             <div class="header__top__right">
               <div class="header__top__right__social">
-                <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
-                <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
-                <a href="https://www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
+                <a href="https://www.facebook.com/profile.php?id=61561874110588"><span class="social_facebook"></span></a>
+                <a href="https://x.com/OIrihose67722"><span class="social_twitter"></span></a>
+                <a href="https://www.linkedin.com/in/obed-irihose-1a661b31b/"><span class="social_linkedin"></span></a>
               </div>
             </div>
           </div>
@@ -546,7 +546,7 @@ page when looking at its layout.</p>
 <h6>Becky Taylor / <span>Support</span></h6>
 </div>
 <ul class="team__item__social">
-<li><a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a></li>
+<li><a href="https://www.facebook.com/profile.php?id=61561874110588"><span class="social_facebook"></span></a></li>
 <li><a href="#"><span class="social_twitter"></span></a></li>
 <li><a href="#"><span class="social_linkedin"></span></a></li>
 </ul>
@@ -558,7 +558,7 @@ page when looking at its layout.</p>
 <h6>Martin Tom / <span>Support</span></h6>
 </div>
 <ul class="team__item__social">
-<li><a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a></li>
+<li><a href="https://www.facebook.com/profile.php?id=61561874110588"><span class="social_facebook"></span></a></li>
 <li><a href="#"><span class="social_twitter"></span></a></li>
 <li><a href="#"><span class="social_linkedin"></span></a></li>
 </ul>
@@ -585,9 +585,9 @@ page when looking at its layout.</p>
               solutions for the elderly, disabled individuals, and those facing medical obstacles.
             </p>
             <div class="footer__social">
-              <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
-              <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
-              <a href="https://www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
+              <a href="https://www.facebook.com/profile.php?id=61561874110588"><span class="social_facebook"></span></a>
+              <a href="https://x.com/OIrihose67722"><span class="social_twitter"></span></a>
+              <a href="https://www.linkedin.com/in/obed-irihose-1a661b31b/"><span class="social_linkedin"></span></a>
               </div>
           </div>
         </div>
@@ -648,9 +648,9 @@ page when looking at its layout.</p>
           <div class="col-lg-3 col-md-4">
             <div class="footer__copyright__links">
               <div class="offcanvas__social">
-                <a href="https://www.facebook.com/profile.php?id=61551405146949"><span class="social_facebook"></span></a>
-                <a href="https://twitter.com/brightstarnmt"><span class="social_twitter"></span></a>
-                <a href="https://www.linkedin.com/in/irihose-obed-004571291"><span class="social_linkedin"></span></a>
+                <a href="https://www.facebook.com/profile.php?id=61561874110588"><span class="social_facebook"></span></a>
+                <a href="https://x.com/OIrihose67722"><span class="social_twitter"></span></a>
+                <a href="https://www.linkedin.com/in/obed-irihose-1a661b31b/"><span class="social_linkedin"></span></a>
                 </div>
             </div>
           </div>
