--- a/about.html
+++ b/about.html
@@ -250,7 +250,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="breadcrumb__text">
-            <h2>About Bright Star Non Medical Transportation</h2>
+            <h2>About OMBI Non Medical Transportation</h2>
           </div>
         </div>
       </div>
@@ -264,7 +264,7 @@
         <div class="col-lg-5">
           <div class="section-title">
             <p>A Small Introduction</p>
-            <h2>Welcome to the Bright Star Non Medical Transportation</h2>
+            <h2>Welcome to the OMBI Non Medical Transportation</h2>
             <img src="/img/hero.jpg" alt="van"><br><br>
             <a href="/contact.html" class="primary-btn"><span>Contact Us</span></a>
             <a href="#" class="primary-btn"><span>Download Business profile & Prices</span></a>
@@ -285,7 +285,7 @@
         <div class="col-lg-5">
           <div class="section-title">
             <p>Why?</p>
-            <h2>Bright Star Non Medical Transportation</h2>
+            <h2>OMBI Non Medical Transportation</h2>
             <div class="about__company__title">
               <p>Our team is committed to delivering top-notch NEMT transportation services to our customers and
                 partners, prioritizing dependability, convenience, safety, and value, while embodying servant leadership
