--- a/applyjob.html
+++ b/applyjob.html
@@ -13,7 +13,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bright Star</title>
+  <title>OMBI</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap');
@@ -264,7 +264,7 @@
       </div>
     </div>
     <div style="text-align: center;">
-      <h2 style="text-align: center; padding-top: 4%;">BRIGHT STAR NON-MEDICAL TRANSPORTATION LLC</h2>
+      <h2 style="text-align: center; padding-top: 4%;">OMBI NON-MEDICAL TRANSPORTATION LLC</h2>
       <h2 style="text-align: center;">APPLY FOR JOB</h2>
       <!--<p style="text-align: center;">Up to 20% Off at Online Booking for Wheelchair/Stretcher Van and Ambulatory Services</p> -->
       <!--<button type="button" class="btn btn-success" style="color: white; background-color: #FF8F00;">New Reservation</button>-->
