--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bright Star Non-Medical Transportation</title>
+  <title>OMBI Non-Medical Transportation</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
@@ -263,7 +263,7 @@
         <div class="col-lg-5">
           <div class="section-title">
             <p>A Small Introduction</p>
-            <h2>Welcome to the Bright Star Non Medical Transportation</h2>
+            <h2>Welcome to the OMBI Non Medical Transportation</h2>
             <img src="/img/hero.jpg" alt="van"><br><br>
             <a href="/contact.html" class="primary-btn"><span>Contact Us</span></a>
             <a href="#" class="primary-btn"><span>Download Business profile & Prices</span></a>
