--- a/wheel.html
+++ b/wheel.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bright Star</title>
+  <title>OMBI</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
@@ -302,7 +302,7 @@
         <div class="col-lg-5">
           <div class="section-title">
             <p>A Small Introduction</p>
-            <h2>Welcome to the Bright Star Non Medical Transportation</h2>
+            <h2>Welcome to the OMBI Non Medical Transportation</h2>
             <img src="/img/hero.jpg" alt="van"><br><br>
             <a href="/contact.html" class="primary-btn"><span>Contact Us</span></a>
             <a href="#" class="primary-btn"><span>Download Business profile & Prices</span></a>
@@ -323,7 +323,7 @@
         <div class="col-lg-5">
           <div class="section-title">
             <p>Why?</p>
-            <h2>Bright Star Non Medical Transportation</h2>
+            <h2>OMBI Non Medical Transportation</h2>
             <div class="about__company__title">
               <p>Our team is committed to delivering top-notch NEMT transportation services to our customers and
                 partners, prioritizing dependability, convenience, safety, and value, while embodying servant leadership
