--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Freight-Broker, unica, creative, html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bright Star</title>
+  <title>OMBI</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap');
