--- a/contact.html
+++ b/contact.html
@@ -435,7 +435,7 @@ strict attention.</p>-->
             </div>
             <div class="contact__widget__text">
               <h6>Email Address</h6>
-              <p><a href="mailto:prempreetham2122@gmail.com" style="color: #FF8F00;">ride@ombinmtransportation.com</a>
+              <p><a href="mailto:ride@ombinonmedicaltransportation.com" style="color: #FF8F00;">ride@ombinonmedicaltransportation.com</a>
               </p>
               <!--<p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="4d24232b22632e22212221242f0d2a202c2421632e2220">[email&#160;protected]</a></p>-->
             </div>
